# EE_4780

./: .gitignore  README.md  pyproject.toml
neural_network/: __init__.py  image_processing.py  neural_networks.py
scripts/: a_create_data.py  b_create_model.py  c_train_model.py  d_predict_model.py
